--- a/cont/contact.html
+++ b/cont/contact.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/docs/style.css" />
     <!-- Fonts - Google  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- favicon  -->
     <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
@@ -20,14 +26,14 @@
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
         var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
+          dl = l != 'dataLayer' ? '&l=' + l : '';
         j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-MDTH6X7");
+      })(window, document, 'script', 'dataLayer', 'GTM-MDTH6X7');
     </script>
     <!-- End Google Tag Manager -->
 
@@ -61,20 +67,18 @@
         <span>+90 545 335 0911</span>
 
         <button label="email">
-          <a href="mailto: x@aliguler.works" target="_blank">email</a>
+          <a href="mailto: aligulerworks@gmail.com" target="_blank">email</a>
         </button>
-        <span>x@aliguler.works</span>
+        <span>aligulerworks@gmail.com</span>
       </div>
 
       <div class="empty"></div>
     </section>
 
     <section class="sprites">
-      <div id="light-switch">
-  
-      </div>
+      <div id="light-switch"></div>
     </section>
-    
+
     <footer>
       <div>
         <button label="return">
