Remaining Links Fix

--- a/cont/contact.html
+++ b/cont/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/docs/style.css" />
+    <link rel="stylesheet" href="./docs/style.css" />
     <!-- Fonts - Google  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +18,7 @@
     />
 
     <!-- favicon  -->
-    <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
+    <link rel="icon" type="image/svg+xml" href="./mats/favi-agw.svg" />
 
     <!-- 32×32 -->
 
@@ -37,7 +37,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <script defer src="../docs/script.js"></script>
+    <script defer src="./docs/script.js"></script>
 
     <title>ali güler - contact</title>
   </head>
