--- a/cont/read-perlatarot.html
+++ b/cont/read-perlatarot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/docs/style.css" />
+    <link rel="stylesheet" href="./docs/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,7 +14,7 @@
 
     <link rel="icon" type="image/png" href="#" />
 
-    <script defer src="../docs/script.js"></script>
+    <script defer src="./docs/script.js"></script>
 
     <title>ali güler works</title>
   </head>
@@ -79,9 +79,7 @@
     </section>
 
     <section class="sprites">
-      <div id="light-switch">
-  
-      </div>
+      <div id="light-switch"></div>
     </section>
 
     <footer>
