--- a/cont/about.html
+++ b/cont/about.html
@@ -117,7 +117,7 @@
         <a href="../index.html">Main</a>
       </button>
       <button label="contact">
-        <a href="/cont/contact.html">Contact</a>
+        <a href="./cont/contact.html">Contact</a>
       </button>
     </footer>
   </body>
