--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h1>n'aber</h1>
     <div class="background">
       <img
-        src="../mats/backs/teemu-paananen-OOE4xAnBhKo-unsplash.jpg"
+        src="./mats/backs/teemu-paananen-OOE4xAnBhKo-unsplash.jpg"
         alt=""
         class="background-image"
       />
