Some Healings In Design

--- a/cont/contact.html
+++ b/cont/contact.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./docs/style.css" />
+    <link rel="stylesheet" href="../docs/style.css" />
+    <script defer src="../docs/script.js"></script>
+
     <!-- Fonts - Google  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,14 +15,12 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
 
     <!-- favicon  -->
-    <link rel="icon" type="image/svg+xml" href="./mats/favi-agw.svg" />
-
-    <!-- 32×32 -->
+    <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
 
     <!-- Google Tag Manager -->
     <script>
@@ -37,21 +37,19 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <script defer src="./docs/script.js"></script>
-
     <title>ali güler - contact</title>
   </head>
 
   <body>
     <header class="header">
       <div class="header-title">
-        <a href="/index.html"><h2>ali güler works</h2></a>
+        <h2><a href="../index.html">ali del vento</a></h2>
       </div>
       <div class="header-line"></div>
       <div class="header-subtitle">
-        <h6 class="header-subtitle-left">Private</h6>
+        <h6 class="header-subtitle-left">Personal</h6>
         <div class="header-sub-triangle"></div>
-        <h6 class="header-subtitle-right">Designer</h6>
+        <h6 class="header-subtitle-right">Portfolio</h6>
       </div>
     </header>
 
@@ -61,15 +59,13 @@
       </aside> -->
 
       <div class="contact-info">
-        <button label="call">
-          <a href="tel:+905453350911" target="_blank">call </a>
-        </button>
-        <span>+90 545 335 0911</span>
-
-        <button label="email">
-          <a href="mailto: aligulerworks@gmail.com" target="_blank">email</a>
-        </button>
-        <span>aligulerworks@gmail.com</span>
+        <a href="tel:+905453350911" target="_blank"
+          ><button label="call">call</button> <span>+90 545 335 0911</span>
+        </a>
+        <a href="mailto: aligulerworks@gmail.com" target="_blank"
+          ><button label="email">email</button>
+          <span>aligulerworks@gmail.com</span>
+        </a>
       </div>
 
       <div class="empty"></div>
