--- a/cont/read-perlatarot.html
+++ b/cont/read-perlatarot.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="eng">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./docs/style.css" />
+    <link rel="stylesheet" href="../docs/style.css" />
+    <script defer src="../docs/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,18 +13,29 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/png" href="#" />
+    <!-- Fonts - Google  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
 
-    <script defer src="./docs/script.js"></script>
+    <!-- favicon  -->
+    <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
 
-    <title>ali güler works</title>
+    <title>ali del vento</title>
   </head>
 
   <body>
     <!-- HEADER  -->
     <header class="header">
       <div class="header-title">
-        <a href="/index.html"><h2>ali güler works</h2></a>
+        <a href="/index.html"><h2>ali del vento</h2></a>
       </div>
       <div class="header-line"></div>
       <div class="header-subtitle">
