--- a/cont/nopage.html
+++ b/cont/nopage.html
@@ -13,6 +13,18 @@
       rel="stylesheet"
     />
 
+    <!-- Fonts - Google  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- favicon  -->
     <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
  
@@ -20,7 +32,7 @@
 
     <header class="header">
       <div class="header-title">
-        <h2><a href="/index.html">ali güler works</a></h2>
+        <h2><a href="/index.html">ali del vento</a></h2>
       </div>
       <div class="header-line"></div>
       <div class="header-subtitle">
