Just Continue With Improvements

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     <!-- favicon  -->
     <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
 
-    <!-- 32×32 -->
-
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
@@ -72,7 +70,7 @@
     <h1>n'aber</h1>
     <div class="background">
       <img
-        src="./mats/backs/teemu-paananen-OOE4xAnBhKo-unsplash.jpg"
+        src="./images/unsplash-backgrounds/ritesh-mandaliya-nMvnVSRz-gM-unsplash.jpg"
         alt=""
         class="background-image"
       />
@@ -264,6 +262,7 @@
 
     <section class="sprites">
       <div id="light-switch"></div>
+      <div id="back-switch"></div>
     </section>
 
     <footer>
