Done Multiple Healings and Content for Sub-pages

--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
     <h1>n'aber</h1>
     <div class="background">
       <img
-        src="./images/unsplash-backgrounds/ritesh-mandaliya-nMvnVSRz-gM-unsplash.jpg"
-        alt=""
+        src=""
+        alt="Background Picture"
         class="background-image"
+        id="back-image"
       />
     </div>
 
@@ -139,7 +140,7 @@
 
           <!-- <p class="card-subh">website</p> -->
         </div>
-        <a href="#"><button>read</button></a>
+        <a href="/cont/read-kriptokahve.html"><button>read</button></a>
       </div>
 
       <div class="works-card mobile-hidden">
