--- a/index.html
+++ b/index.html
@@ -262,8 +262,12 @@
     </section>
 
     <section class="sprites">
-      <div id="light-switch"></div>
-      <div id="back-switch"></div>
+      <div id="light-switch">
+        <span class="tooltip">Light switch</span>
+      </div>
+      <div id="back-switch">
+        <span class="tooltip">Shuffle background</span>
+      </div>
     </section>
 
     <footer>
