Fix Internatl Links

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <h4>website</h4>
           <!-- <p class="card-subh">website</p> -->
         </div>
-        <a href="/cont/read-artbyceylaninsel.html"><button>read</button></a>
+        <a href="./cont/read-artbyceylaninsel.html"><button>read</button></a>
       </div>
 
       <!-- PERLA TAROT  -->
@@ -127,7 +127,7 @@
           </h3>
           <h4>website</h4>
         </div>
-        <a href="/cont/read-perlatarot.html"><button>read</button></a>
+        <a href="./cont/read-perlatarot.html"><button>read</button></a>
       </div>
 
       <!-- KRIPTO KAHVE  -->
@@ -140,7 +140,7 @@
 
           <!-- <p class="card-subh">website</p> -->
         </div>
-        <a href="/cont/read-kriptokahve.html"><button>read</button></a>
+        <a href="./cont/read-kriptokahve.html"><button>read</button></a>
       </div>
 
       <div class="works-card mobile-hidden">
@@ -162,7 +162,7 @@
           <h4>website</h4>
           <!-- <p class="card-subh">website</p> -->
         </div>
-        <a href="/cont/read-coffeemolecule.html"><button>read</button></a>
+        <a href="./cont/read-coffeemolecule.html"><button>read</button></a>
       </div>
 
       <!-- ROMAN VS DIGITAL  -->
@@ -215,7 +215,7 @@
       <div class="works-card">
         <div class="card-main">
           <h3 class="card-header">
-            <a href="/cont/about.html">about</a>
+            <a href="./cont/about.html">about</a>
           </h3>
           <!-- <p class="card-subh">clove harvest</p> -->
         </div>
@@ -271,7 +271,7 @@
     </section>
 
     <footer>
-      <a href="/cont/contact.html"><button label="contact">contact</button></a>
+      <a href="./cont/contact.html"><button label="contact">contact</button></a>
     </footer>
   </body>
 </html>
