Fix Internatl Links-2

--- a/cont/about.html
+++ b/cont/about.html
@@ -57,7 +57,7 @@
 
     <header class="header">
       <div class="header-title">
-        <h2><a href="/index.html">ali del vento</a></h2>
+        <h2><a href="../index.html">ali del vento</a></h2>
       </div>
       <div class="header-line"></div>
       <div class="header-subtitle">
