--- a/cont/contact.html
+++ b/cont/contact.html
@@ -78,7 +78,7 @@
     <footer>
       <div>
         <button label="return">
-          <a href="/index.html">return</a>
+          <a href="../index.html">return</a>
         </button>
       </div>
     </footer>
