--- a/cont/ended-read-coffeemolecule.html
+++ b/cont/ended-read-coffeemolecule.html
@@ -23,7 +23,7 @@
     <!-- HEADER  -->
     <header class="header">
       <div class="header-title">
-        <a href="/index.html"><h2>ali güler works</h2></a>
+        <a href="../index.html"><h2>ali güler works</h2></a>
       </div>
       <div class="header-line"></div>
       <div class="header-subtitle">
