--- a/cont/read-perlatarot.html
+++ b/cont/read-perlatarot.html
@@ -35,7 +35,7 @@
     <!-- HEADER  -->
     <header class="header">
       <div class="header-title">
-        <a href="/index.html"><h2>ali del vento</h2></a>
+        <a href="../index.html"><h2>ali del vento</h2></a>
       </div>
       <div class="header-line"></div>
       <div class="header-subtitle">
