--- a/index.html
+++ b/index.html
@@ -1,277 +1,241 @@
 <!DOCTYPE html>
 <html lang="eng">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./docs/style.css" />
 
-    <!-- Fonts - Google  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./docs/style.css" />
 
-    <!-- favicon  -->
-    <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
+  <!-- Fonts - Google  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap" rel="stylesheet" />
 
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-MDTH6X7');
-    </script>
-    <!-- End Google Tag Manager -->
+  <!-- favicon  -->
+  <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
 
-    <script defer src="./docs/script.js"></script>
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MDTH6X7');
+  </script>
+  <!-- End Google Tag Manager -->
 
-    <title>ali del vento</title>
-  </head>
+  <script defer src="./docs/script.js"></script>
 
-  <body>
-    <!-- GOOGLE TAG MANAGER BODY  -->
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-MDTH6X7"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <!-- HEADER  -->
+  <title>ali del vento</title>
+</head>
 
-    <header class="header">
-      <div class="header-title">
-        <h2><a href="./index.html">ali del vento</a></h2>
-      </div>
-      <div class="header-line"></div>
-      <div class="header-subtitle">
-        <h6 class="header-subtitle-left">Personal</h6>
-        <div class="header-sub-triangle"></div>
-        <h6 class="header-subtitle-right">Portfolio</h6>
-      </div>
-    </header>
+<body>
+  <!-- GOOGLE TAG MANAGER BODY  -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MDTH6X7" height="0" width="0"
+      style="display: none; visibility: hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <!-- HEADER  -->
 
-    <h1>n'aber</h1>
-    <div class="background">
-      <img
-        src=""
-        alt="Background Picture"
-        class="background-image"
-        id="back-image"
-      />
+  <header class="header">
+    <div class="header-title">
+      <h2><a href="./index.html">ali del vento</a></h2>
+    </div>
+    <div class="header-line"></div>
+    <div class="header-subtitle">
+      <h6 class="header-subtitle-left">Personal</h6>
+      <div class="header-sub-triangle"></div>
+      <h6 class="header-subtitle-right">Portfolio</h6>
+    </div>
+  </header>
+
+  <h1>n'aber</h1>
+  <div class="background">
+    <img src="" alt="Background Picture" class="background-image" id="back-image" />
+  </div>
+
+  <!-- CARDS  -->
+
+  <section class="main-works">
+    <!-- EMPTY CARDS -->
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
     </div>
 
-    <!-- CARDS  -->
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
 
-    <section class="main-works">
-      <!-- EMPTY CARDS -->
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
+
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
+
+    <div class="works-card">
+      <div class="card-main"></div>
+    </div>
+
+    <div class="works-card">
+      <div class="card-main"></div>
+    </div>
+
+    <!-- ART BY CEYLAN INSEL  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a href="https://artbyceylaninsel.com" target="_blank">Art By Ceylan Insel</a>
+        </h3>
+        <h4>website</h4>
+        <!-- <p class="card-subh">website</p> -->
       </div>
+      <a href="./cont/read-artbyceylaninsel.html"><button>read</button></a>
+    </div>
 
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
+    <!-- PERLA TAROT  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a href="https://alidelvento.art/perlaTarot/" target="_blank">Perla Tarot</a>
+        </h3>
+        <h4>website</h4>
       </div>
+      <a href="./cont/read-perlatarot.html"><button>read</button></a>
+    </div>
 
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
+    <!-- KRIPTO KAHVE  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a href="https://kriptokahve.com" target="_blank">Kripto Kahve</a>
+        </h3>
+        <h4>website</h4>
+
+        <!-- <p class="card-subh">website</p> -->
       </div>
+      <a href="./cont/read-kriptokahve.html"><button>read</button></a>
+    </div>
 
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
+
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
+
+    <!-- COFFEE MOLECULE  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a href="https://coffeemolecule.com" target="_blank">
+            Molecule Coffee</a>
+        </h3>
+        <h4>website</h4>
+        <!-- <p class="card-subh">website</p> -->
       </div>
+      <a href="./cont/read-coffeemolecule.html"><button>read</button></a>
+    </div>
 
-      <div class="works-card">
-        <div class="card-main"></div>
+    <!-- ROMAN VS DIGITAL  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a href="https://alicaptain.github.io/romanOrDigitalConverter/" target="_blank">Ancient Converter</a>
+        </h3>
+        <h4>Vanilla JS Study</h4>
       </div>
+      <a target="_blank" href="https://github.com/alicaptain/romanOrDigitalConverter"><button>github</button></a>
+    </div>
 
-      <div class="works-card">
-        <div class="card-main"></div>
+    <!-- ROCK PAPER SCISSORS  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a href="https://alicaptain.github.io/odin-rockPaperScissors/" target="_blank">Rock Paper Scissors</a>
+        </h3>
+        <h4>Vanilla JS Study</h4>
       </div>
+      <a target="_blank" href="https://github.com/alicaptain/odin-rockPaperScissors"><button>github</button></a>
+    </div>
 
-      <!-- ART BY CEYLAN INSEL  -->
-      <div class="works-card">
-        <div class="card-main">
-          <h3 class="card-header-external">
-            <a href="https://artbyceylaninsel.com" target="_blank"
-              >Art By Ceylan Insel</a
-            >
-          </h3>
-          <h4>website</h4>
-          <!-- <p class="card-subh">website</p> -->
-        </div>
-        <a href="./cont/read-artbyceylaninsel.html"><button>read</button></a>
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
+
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
+
+    <!-- ABOUT CARD  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header">
+          <a href="./cont/about.html">about</a>
+        </h3>
+        <!-- <p class="card-subh">clove harvest</p> -->
       </div>
+      <!-- <div class="subcard-single"><a href="#">about</a></div> -->
+      <img id="aliphotos" src="/mats/IMG_0282.JPG" alt="ali working in farm" />
+    </div>
 
-      <!-- PERLA TAROT  -->
-      <div class="works-card">
-        <div class="card-main">
-          <h3 class="card-header-external">
-            <a href="https://perlatarot.com" target="_blank">Perla Tarot</a>
-          </h3>
-          <h4>website</h4>
-        </div>
-        <a href="./cont/read-perlatarot.html"><button>read</button></a>
-      </div>
+    <!-- EMPTY CARDS -->
+    <div class="works-card">
+      <div class="card-main"></div>
+    </div>
 
-      <!-- KRIPTO KAHVE  -->
-      <div class="works-card">
-        <div class="card-main">
-          <h3 class="card-header-external">
-            <a href="https://kriptokahve.com" target="_blank">Kripto Kahve</a>
-          </h3>
-          <h4>website</h4>
+    <div class="works-card">
+      <div class="card-main"></div>
+    </div>
 
-          <!-- <p class="card-subh">website</p> -->
-        </div>
-        <a href="./cont/read-kriptokahve.html"><button>read</button></a>
-      </div>
+    <div class="works-card">
+      <div class="card-main"></div>
+    </div>
 
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
-      </div>
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
 
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
-      </div>
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
 
-      <!-- COFFEE MOLECULE  -->
-      <div class="works-card">
-        <div class="card-main">
-          <h3 class="card-header-external">
-            <a href="https://coffeemolecule.com" target="_blank">
-              Molecule Coffee</a
-            >
-          </h3>
-          <h4>website</h4>
-          <!-- <p class="card-subh">website</p> -->
-        </div>
-        <a href="./cont/read-coffeemolecule.html"><button>read</button></a>
-      </div>
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
 
-      <!-- ROMAN VS DIGITAL  -->
-      <div class="works-card">
-        <div class="card-main">
-          <h3 class="card-header-external">
-            <a
-              href="https://alicaptain.github.io/romanOrDigitalConverter/"
-              target="_blank"
-              >Ancient Converter</a
-            >
-          </h3>
-          <h4>Vanilla JS Study</h4>
-        </div>
-        <a
-          target="_blank"
-          href="https://github.com/alicaptain/romanOrDigitalConverter"
-          ><button>github</button></a
-        >
-      </div>
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
 
-      <!-- ROCK PAPER SCISSORS  -->
-      <div class="works-card">
-        <div class="card-main">
-          <h3 class="card-header-external">
-            <a
-              href="https://alicaptain.github.io/odin-rockPaperScissors/"
-              target="_blank"
-              >Rock Paper Scissors</a
-            >
-          </h3>
-          <h4>Vanilla JS Study</h4>
-        </div>
-        <a
-          target="_blank"
-          href="https://github.com/alicaptain/odin-rockPaperScissors"
-          ><button>github</button></a
-        >
-      </div>
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
+  </section>
 
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
-      </div>
+  <section class="sprites">
+    <div id="light-switch">
+      <span class="tooltip">Light switch</span>
+    </div>
+    <div id="back-switch">
+      <span class="tooltip">Shuffle background</span>
+    </div>
+  </section>
 
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
-      </div>
+  <footer>
+    <a href="./cont/contact.html"><button label="contact">contact</button></a>
+  </footer>
+</body>
 
-      <!-- ABOUT CARD  -->
-      <div class="works-card">
-        <div class="card-main">
-          <h3 class="card-header">
-            <a href="./cont/about.html">about</a>
-          </h3>
-          <!-- <p class="card-subh">clove harvest</p> -->
-        </div>
-        <!-- <div class="subcard-single"><a href="#">about</a></div> -->
-        <img
-          id="aliphotos"
-          src="/mats/IMG_0282.JPG"
-          alt="ali working in farm"
-        />
-      </div>
-
-      <!-- EMPTY CARDS -->
-      <div class="works-card">
-        <div class="card-main"></div>
-      </div>
-
-      <div class="works-card">
-        <div class="card-main"></div>
-      </div>
-
-      <div class="works-card">
-        <div class="card-main"></div>
-      </div>
-
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
-      </div>
-
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
-      </div>
-
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
-      </div>
-
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
-      </div>
-
-      <div class="works-card mobile-hidden">
-        <div class="card-main"></div>
-      </div>
-    </section>
-
-    <section class="sprites">
-      <div id="light-switch">
-        <span class="tooltip">Light switch</span>
-      </div>
-      <div id="back-switch">
-        <span class="tooltip">Shuffle background</span>
-      </div>
-    </section>
-
-    <footer>
-      <a href="./cont/contact.html"><button label="contact">contact</button></a>
-    </footer>
-  </body>
 </html>
