--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     <div class="works-card">
       <div class="card-main">
         <h3 class="card-header-external">
-          <a href="https://alidelvento.art/thefool/" target="_blank">THE FOOL TAROT</a>
+          <a href="https://alidelvento.art/thefool/" target="_blank">The Fool</a>
         </h3>
-        <h4>website</h4>
+        <h4>Tarot Website Example</h4>
       </div>
       <a href="./cont/read-perlatarot.html"><button>read</button></a>
     </div>
