Before Changing JS Color Varibles

--- a/index.html
+++ b/index.html
@@ -91,46 +91,93 @@
       <div class="card-main"></div>
     </div>
 
-    <!-- ART BY CEYLAN INSEL  -->
+
+    <!-- VERYLUCKYCRAFTSHOP -->
     <div class="works-card">
       <div class="card-main">
         <h3 class="card-header-external">
-          <a href="https://artbyceylaninsel.com" target="_blank">Art By Ceylan Insel</a>
+          <a class="lnk-ext" href="https://ceylaninsel.art/" target="_blank">Very Lucky Craft Shop</a>
         </h3>
         <h4>website</h4>
-        <!-- <p class="card-subh">website</p> -->
+        <h5>(UNDER DEVELOPMENT)</h5>
       </div>
-      <a href="./cont/read-artbyceylaninsel.html"><button>read</button></a>
+      <a href="./cont/read-verylucky.html"><button class="btn-int" type="button">read</button></a>
     </div>
 
-    <!--  SITE EXAMPLE - TAROT -->
+    <!-- BELOVED MEMORIES  -->
     <div class="works-card">
       <div class="card-main">
         <h3 class="card-header-external">
-          <a href="https://alidelvento.art/thefool/" target="_blank">The Fool</a>
-        </h3>
-        <h4>Tarot Website Example</h4>
-      </div>
-      <a href="./cont/read-perlatarot.html"><button>read</button></a>
-    </div>
-
-    <!-- KRIPTO KAHVE  -->
-    <div class="works-card">
-      <div class="card-main">
-        <h3 class="card-header-external">
-          <a href="https://kriptokahve.com" target="_blank">Kripto Kahve</a>
+          <a class="lnk-ext" href="https://alidelvento.art/memories/" target="_blank">Memories of Beloved</a>
         </h3>
         <h4>website</h4>
 
+      </div>
+      <a href="./cont/read-memories.html"><button class="btn-int" type="button">read</button></a>
+    </div>
+
+    <!-- SEND MY POST  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a class="lnk-ext" href="https://sendmypost.co.uk/" target="_blank">Send My Post</a>
+        </h3>
+        <h4>website</h4>
+
         <!-- <p class="card-subh">website</p> -->
       </div>
-      <a href="./cont/read-kriptokahve.html"><button>read</button></a>
+      <a href="./cont/read-sendmypost.html"><button class="btn-int" type="button">read</button></a>
     </div>
 
     <div class="works-card mobile-hidden">
       <div class="card-main"></div>
     </div>
 
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
+
+
+
+    <!--  SITE EXAMPLE - TAROT -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a class="lnk-ext" href="https://alidelvento.art/thefool/" target="_blank">The Fool</a>
+        </h3>
+        <h4>Tarot Website Example</h4>
+      </div>
+      <a href="./cont/read-perlatarot.html"><button class="btn-int" type="button">read</button></a>
+    </div>
+
+    <!-- ART BY CEYLAN INSEL  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a class="lnk-ext" href="https://artbyceylaninsel.com" target="_blank">Art By Ceylan Insel</a>
+        </h3>
+        <h4>website</h4>
+        <!-- <p class="card-subh">website</p> -->
+      </div>
+      <a href="./cont/read-artbyceylaninsel.html"><button class="btn-int" type="button">read</button></a>
+    </div>
+
+    <!-- CRYPTO COFFEE  -->
+    <div class="works-card">
+      <div class="card-main">
+        <h3 class="card-header-external">
+          <a class="lnk-ext" href="https://alidelvento.art/cryptocoffee/" target="_blank">Crypto Coffee</a>
+        </h3>
+        <h4>website</h4>
+
+        <!-- <p class="card-subh">website</p> -->
+      </div>
+      <a href="./cont/read-kriptokahve.html"><button class="btn-int" type="button">read</button></a>
+    </div>
+
+    <div class="works-card mobile-hidden">
+      <div class="card-main"></div>
+    </div>
     <div class="works-card mobile-hidden">
       <div class="card-main"></div>
     </div>
@@ -139,35 +186,39 @@
     <div class="works-card">
       <div class="card-main">
         <h3 class="card-header-external">
-          <a href="https://coffeemolecule.com" target="_blank">
+          <a class="lnk-ext" href="https://coffeemolecule.com" target="_blank">
             Molecule Coffee</a>
         </h3>
         <h4>website</h4>
         <!-- <p class="card-subh">website</p> -->
       </div>
-      <a href="./cont/read-coffeemolecule.html"><button>read</button></a>
+      <a href="./cont/read-coffeemolecule.html"><button class="btn-int" type="button">read</button></a>
     </div>
 
     <!-- ROMAN VS DIGITAL  -->
     <div class="works-card">
       <div class="card-main">
         <h3 class="card-header-external">
-          <a href="https://alicaptain.github.io/romanOrDigitalConverter/" target="_blank">Ancient Converter</a>
+          <a class="lnk-ext" href="https://alicaptain.github.io/romanOrDigitalConverter/" target="_blank">Ancient
+            Converter</a>
         </h3>
         <h4>Vanilla JS Study</h4>
       </div>
-      <a target="_blank" href="https://github.com/alicaptain/romanOrDigitalConverter"><button>github</button></a>
+      <a target="_blank" href="https://github.com/alicaptain/romanOrDigitalConverter"><button class="btn-ext"
+          type="button">github</button></a>
     </div>
 
     <!-- ROCK PAPER SCISSORS  -->
     <div class="works-card">
       <div class="card-main">
         <h3 class="card-header-external">
-          <a href="https://alicaptain.github.io/odin-rockPaperScissors/" target="_blank">Rock Paper Scissors</a>
+          <a class="lnk-ext" href="https://alicaptain.github.io/odin-rockPaperScissors/" target="_blank">Rock Paper
+            Scissors</a>
         </h3>
         <h4>Vanilla JS Study</h4>
       </div>
-      <a target="_blank" href="https://github.com/alicaptain/odin-rockPaperScissors"><button>github</button></a>
+      <a target="_blank" href="https://github.com/alicaptain/odin-rockPaperScissors"><button class="btn-ext"
+          type="button">github</button></a>
     </div>
 
     <div class="works-card mobile-hidden">
@@ -187,7 +238,6 @@
         <!-- <p class="card-subh">clove harvest</p> -->
       </div>
       <!-- <div class="subcard-single"><a href="#">about</a></div> -->
-      <img id="aliphotos" src="/mats/IMG_0282.JPG" alt="ali working in farm" />
     </div>
 
     <!-- EMPTY CARDS -->
