Color Variables and Fixes

--- a/cont/about.html
+++ b/cont/about.html
@@ -105,8 +105,8 @@
   </section>
 
   <footer>
-    <a href="../index.html"><button label="contact">main</button></a>
-    <a href="../cont/contact.html"><button label="contact">contact</button></a>
+    <a href="../index.html"><button class="btn-int" label="contact">main</button></a>
+    <a href="../cont/contact.html"><button class="btn-int" label="contact">contact</button></a>
     </button>
   </footer>
 </body>
