--- a/index.html
+++ b/index.html
@@ -229,21 +229,16 @@
       <div class="card-main"></div>
     </div>
 
-    <!-- ABOUT CARD  -->
-    <div class="works-card">
-      <div class="card-main">
-        <h3 class="card-header">
-          <a href="./cont/about.html">about</a>
-        </h3>
-        <!-- <p class="card-subh">clove harvest</p> -->
-      </div>
-      <!-- <div class="subcard-single"><a href="#">about</a></div> -->
-    </div>
 
     <!-- EMPTY CARDS -->
     <div class="works-card">
       <div class="card-main"></div>
     </div>
+
+    <div class="works-card">
+      <div class="card-main"></div>
+    </div>
+
 
     <div class="works-card">
       <div class="card-main"></div>
@@ -284,7 +279,9 @@
   </section>
 
   <footer>
-    <a href="./cont/contact.html"><button label="contact">contact</button></a>
+    <a href="./cont/contact.html"><button class="btn-int" label="contact">contact</button></a>
+    <a href="./cont/about.html"><button class="btn-int" label="about">about</button></a>
+
   </footer>
 </body>
 
