--- a/cont/contact.html
+++ b/cont/contact.html
@@ -1,86 +1,83 @@
 <!DOCTYPE html>
 <html lang="eng">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../docs/style.css" />
-    <script defer src="../docs/script.js"></script>
 
-    <!-- Fonts - Google  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../docs/style.css" />
+  <script defer src="../docs/script.js"></script>
 
-    <!-- favicon  -->
-    <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
+  <!-- Fonts - Google  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;600&display=swap" rel="stylesheet" />
 
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-MDTH6X7');
-    </script>
-    <!-- End Google Tag Manager -->
+  <!-- favicon  -->
+  <link rel="icon" type="image/svg+xml" href="/mats/favi-agw.svg" />
 
-    <title>ali güler - contact</title>
-  </head>
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true;
+      j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MDTH6X7');
+  </script>
+  <!-- End Google Tag Manager -->
 
-  <body>
-    <header class="header">
-      <div class="header-title">
-        <h2><a href="../index.html">ali del vento</a></h2>
-      </div>
-      <div class="header-line"></div>
-      <div class="header-subtitle">
-        <h6 class="header-subtitle-left">Personal</h6>
-        <div class="header-sub-triangle"></div>
-        <h6 class="header-subtitle-right">Portfolio</h6>
-      </div>
-    </header>
+  <title>ali güler - contact</title>
+</head>
 
-    <section class="contact">
-      <!-- <aside class="title-area">
+<body>
+  <header class="header">
+    <div class="header-title">
+      <h2><a href="../index.html">ali del vento</a></h2>
+    </div>
+    <div class="header-line"></div>
+    <div class="header-subtitle">
+      <h6 class="header-subtitle-left">Personal</h6>
+      <div class="header-sub-triangle"></div>
+      <h6 class="header-subtitle-right">Portfolio</h6>
+    </div>
+  </header>
+
+  <section class="contact">
+    <!-- <aside class="title-area">
         <h2 class="page-title">contact</h2>
       </aside> -->
 
-      <div class="contact-info">
-        <a href="tel:+905453350911" target="_blank"
-          ><button label="call">call</button> <span>+90 545 335 0911</span>
-        </a>
-        <a href="mailto: aligulerworks@gmail.com" target="_blank"
-          ><button label="email">email</button>
-          <span>aligulerworks@gmail.com</span>
-        </a>
-      </div>
+    <div class="contact-info">
+      <a href="tel:+905453350911" target="_blank"><button class="btn-int" label="call">call</button> <span>+90 545 335
+          0911</span>
+      </a>
+      <a href="mailto: aligulerworks@gmail.com" target="_blank"><button class="btn-int" label="email">email</button>
+        <span>aligulerworks@gmail.com</span>
+      </a>
+    </div>
 
-      <div class="empty"></div>
-    </section>
+    <div class="empty"></div>
+  </section>
 
-    <section class="sprites">
-      <div id="light-switch"></div>
-    </section>
+  <section class="sprites">
+    <div id="light-switch"></div>
+  </section>
 
-    <footer>
-      <div>
-        <button label="return">
-          <a href="../index.html">return</a>
-        </button>
-      </div>
-    </footer>
-  </body>
+  <footer>
+    <div>
+      <button class="btn-int" label="return">
+        <a href="../index.html">return</a>
+      </button>
+    </div>
+  </footer>
+</body>
+
 </html>
