Background and Light Mode Improvements, Fixes Etc.

--- a/cont/about.html
+++ b/cont/about.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../docs/style.css" />
   <script defer src="../docs/script.js"></script>
 
+
   <!-- Fonts - Google  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -52,16 +53,18 @@
     </div>
     <div class="header-line"></div>
     <div class="header-subtitle">
-      <h6 class="header-subtitle-left">Private</h6>
+      <h6 class="header-subtitle-left">Personal</h6>
       <div class="header-sub-triangle"></div>
-      <h6 class="header-subtitle-right">Design</h6>
+      <h6 class="header-subtitle-right">Portfolio</h6>
     </div>
   </header>
-
   <h1>about</h1>
+  <div class="background">
+    <img src="" alt="Background Picture" class="background-image" id="back-image" />
+  </div>
   <!-- CARDS  -->
 
-  <section class="about-works">
+  <section id="page" class="about-works">
     <h2>design & music</h2>
 
     <div class="about-card">
@@ -96,12 +99,8 @@
     </div>
   </section>
 
-  <img class="agw-background" src="/images/20200503_145129.webp" alt="background silhouette" />
-
   <section class="sprites">
-    <div id="light-switch">
 
-    </div>
   </section>
 
   <footer>
