--- a/cont/contact.html
+++ b/cont/contact.html
@@ -50,10 +50,13 @@
     </div>
   </header>
 
-  <section class="contact">
-    <!-- <aside class="title-area">
-        <h2 class="page-title">contact</h2>
-      </aside> -->
+  <h1>Contact</h1>
+
+  <div class="background">
+    <img src="" alt="Background Picture" class="background-image" id="back-image" />
+  </div>
+  <section id="page" class="contact">
+
 
     <div class="contact-info">
       <a href="tel:+905453350911" target="_blank"><button class="btn-int" label="call">call</button> <span>+90 545 335
