--- a/cont/ended-read-coffeemolecule.html
+++ b/cont/ended-read-coffeemolecule.html
@@ -1,85 +1,84 @@
 <!DOCTYPE html>
 <html lang="tr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./docs/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,500;1,200;1,300;1,500&display=swap"
-      rel="stylesheet"
-    />
 
-    <link rel="icon" type="image/png" href="#" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./docs/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,500;1,200;1,300;1,500&display=swap"
+    rel="stylesheet" />
 
-    <script defer src="./docs/script.js"></script>
+  <link rel="icon" type="image/png" href="#" />
 
-    <title>ali güler works</title>
-  </head>
+  <script defer src="./docs/script.js"></script>
 
-  <body>
-    <!-- HEADER  -->
-    <header class="header">
-      <div class="header-title">
-        <a href="../index.html"><h2>ali güler works</h2></a>
+  <title>ali güler works</title>
+</head>
+
+<body>
+  <!-- HEADER  -->
+  <header class="header">
+    <div class="header-title">
+      <a href="../index.html">
+        <h2>ali güler works</h2>
+      </a>
+    </div>
+    <div class="header-line"></div>
+    <div class="header-subtitle">
+      <h6 class="header-subtitle-left">Private</h6>
+      <div class="header-sub-triangle"></div>
+      <h6 class="header-subtitle-right">Design</h6>
+    </div>
+  </header>
+
+  <h1>Coffee Molecule</h1>
+
+  <div class="background">
+    <img src="" alt="Background Picture" class="background-image" id="back-image" />
+  </div>
+
+  <section class="read-works">
+    <div class="read-card">
+      <div class="read-heading">
+        <h2>coffeemolecule.com</h2>
+        <p>website | e-commerce | graphic design | marketing | consulting</p>
       </div>
-      <div class="header-line"></div>
-      <div class="header-subtitle">
-        <h6 class="header-subtitle-left">Private</h6>
-        <div class="header-sub-triangle"></div>
-        <h6 class="header-subtitle-right">Design</h6>
+      <div class="read-block">
+        <ul>
+          <li>A unique interface creation</li>
+          <li>Woocommerce infrastructure setup</li>
+          <li>Product archive reorganisation</li>
+          <li>Google ads campaigns creation, publishing & management</li>
+          <li>Improving text content for consistent ad campaigns</li>
+          <li>Retouch, resize & optimize visual materials</li>
+        </ul>
       </div>
-    </header>
-    <!-- 
-    <div class="background-container">
-      <img
-        class="read-background-image"
-        src="/mats/coffeemolecule-kahve.webp"
-        alt="capture-coffeemolecule.com"
-      />
-    </div> -->
-
-    <!-- READ CARD(S)  -->
-
-    <section class="read-works">
-      <div class="read-card">
-        <div class="read-heading">
-          <h2>coffeemolecule.com</h2>
-          <p>website | e-commerce | graphic design | marketing | consulting</p>
-        </div>
-        <div class="read-block">
-          <ul>
-            <li>A unique interface creation</li>
-            <li>Woocommerce infrastructure setup</li>
-            <li>Product archive reorganisation</li>
-            <li>Google ads campaigns creation, publishing & management</li>
-            <li>Improving text content for consistent ad campaigns</li>
-            <li>Retouch, resize & optimize visual materials</li>
-          </ul>
-        </div>
-      </div>
-      <div class="only-card">
-        <button label="visit">
-          <a href="https://coffeemolecule.com" target="_blank">Visit</a>
-        </button>
-      </div>
-    </section>
-
-    <section class="triplecolumn">
-      <left class="left-column"></left>
-      <middle class="mid-column"></middle>
-      <right class="right-column"></right>
-    </section>
-
-    <footer>
-      <button label="main">
-        <a href="../index.html">Main</a>
+    </div>
+    <div class="only-card">
+      <button label="visit">
+        <a href="https://coffeemolecule.com" target="_blank">Visit</a>
       </button>
-      <button label="contact">
-        <a href="/cont/contact.html">Contact</a>
-      </button>
-    </footer>
-  </body>
+    </div>
+  </section>
+
+  <section class="triplecolumn">
+    <left class="left-column"></left>
+    <middle class="mid-column"></middle>
+    <right class="right-column"></right>
+  </section>
+
+  <footer>
+    <button label="main">
+      <a href="../index.html">Main</a>
+    </button>
+    <button label="contact">
+      <a href="/cont/contact.html">Contact</a>
+    </button>
+  </footer>
+</body>
+
 </html>
