Photo By and Other Fixes

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <h1>n'aber</h1>
   <div class="background">
     <img src="" alt="Background Picture" class="background-image" id="back-image" />
+    <p class="photo-by">Photo: <span>Ali Del Vento</span></p>
   </div>
 
   <!-- CARDS  -->
