Link Fix (again)

--- a/cont/about.html
+++ b/cont/about.html
@@ -61,6 +61,7 @@
   <h1>about</h1>
   <div class="background">
     <img src="" alt="Background Picture" class="background-image" id="back-image" />
+    <p class="photo-by">Photo: <span>Ali Del Vento</span></p>
   </div>
   <!-- CARDS  -->
 
