test for a link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- head for home  -->
-  <script src="components/head-tag-home.js" type="text/javascript" defer></script>
+  <script src="./components/head-tag-home.js" type="text/javascript" defer></script>
   <head-tag-home></head-tag-home>
   <!-- end - head for home -->
 
