--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- end - head for home -->
 
   <!-- JS SCRIPTS -->
-  <script defer src="./docs/script.js"></script>
+  <script defer src="./script.js"></script>
   <script defer src="components/header.js" type="text/javascript"></script>
 
 </head>
