--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <!-- JS SCRIPTS -->
   <script defer src="./script.js"></script>
   <script defer src="components/header.js" type="text/javascript"></script>
+  <script defer src="components/sprites.js" type="text/javascript"></script>
+
 
 </head>
 
@@ -214,9 +216,12 @@
     </div>
   </section>
 
-  <section class="sprites">
+  <!-- <section class="sprites">
 
-  </section>
+  </section> -->
+
+  <sprites-component class="disappear"></sprites-component>
+
 
 
   <footer>
