Moderate Fixes and Improvements

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="eng">
 
 <head>
+  <link rel="stylesheet" href="./style.css" />
+
   <!-- head for home  -->
   <script src="./components/head-tag-home.js" type="text/javascript" defer></script>
   <!-- end - head for home -->
@@ -24,14 +26,17 @@
   <header-component class="disappear"></header-component>
 
   <h1>n'aber</h1>
-  <div class="background">
+  <!-- <div class="background">
     <img src="" alt="Background Picture" class="background-image" id="back-image" />
-    <p class="photo-by">Photo: <span>Ali Del Vento</span></p>
-  </div>
+    <p class="photo-by">Photo: <span>Ali Murat Güler</span></p>
+  </div> -->
+
+  <bg-revealer-component class="disappear"></bg-revealer-component>
+
 
   <!-- CARDS  -->
 
-  <section id="page" class="main-works home-page">
+  <section id="page-home" class="page main-works home-page">
     <!-- EMPTY CARDS -->
     <div class="works-card mobile-hidden">
       <div class="card-main"></div>
